# testes_django

./: .gitignore  Makefile  README.md  pyproject.toml
core/: models.py  views.py
core/tests/: tests_models.py
sorveteria/sorveteria/: asgi.py  settings.py  urls.py  wsgi.py
