[tool.poetry]
name = "testes_django"
version = "0.1.0"
description = ""
authors = ["Paulo <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
